tests/bigint/invalid04.js
const invalid_neg_decimal = -1.0n; // error
